<resources>
    <string name="app_name">Tolk</string>
    <string name="app_description">Real time chat with your friends!</string>

    <string name="main_app_id">ca-app-pub-8676187581068146~3154011298</string>
    <string name="banner_app_id">ca-app-pub-8676187581068146/8278006152</string>
    <string name="interstitial_app_id">ca-app-pub-8676187581068146/3775654366</string>

    <string name="strSignIn">SIGN IN</string>
    <string name="strRegister">REGISTER</string>
    <string name="strEmail">EMAIL</string>
    <string name="strUsername">USERNAME</string>
    <string name="strPassword">PASSWORD</string>
    <string name="strExistUser">Existing User? Sign In</string>
    <string name="strNewSignUp">New User? Register</string>
    <string name="strReAuthenticate">Login</string>
    <string name="strMsgAuthenticate">Please make sure that deleted account can\'t be recover any data which exist right now.</string>
    <string name="strGroupAdmin">Group Admin</string>
    <string name="strCreatedOn">Created on %1$s</string>
    <string name="strParticipants">%1$d participants</string>

    <!-- Messages -->
    <string name="msg_please_wait">Please wait...</string>
    <string name="msg_image_upload">Uploading...</string>
    <string name="strLogout">Logout</string>
    <string name="strRateApp">Rate App</string>
    <string name="strShareapp">Share App</string>
    <string name="strAboutUs">About us</string>
    <string name="strSettings">Settings</string>
    <string name="strPrivacy">Privacy Policy</string>
    <string name="strDeleteAccount">Delete My Account</string>

    <string name="strUserInfo">User Info</string>
    <string name="strGroupView">Group Info</string>
    <string name="strClearMyChats">Clear My Chats</string>
    <string name="strEditGroup">Edit Group</string>
    <string name="strLeaveGroup">Leave Group</string>
    <string name="strDeleteGroup">Delete Group</string>
    <string name="strExitGroup">Exit Group</string>
    <!-- Close message-->
    <string name="press_again_to_exit">Press again to exit app</string>

    <string name="strChats">Chats</string>
    <string name="strUsers">Users</string>
    <string name="strGroups">Groups</string>
    <string name="strProfile">Profile</string>
    <string name="strCreateNewGroup">Create Group</string>
    <string name="strUpdate">Update</string>
    <string name="strTypeYourMessage">Type your message</string>
    <string name="strSearch">Search...</string>
    <string name="strSearchWithCount">Search... (Total Users : %1$d)</string>

    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">BBNotificationChannel</string>
    <string name="msg_subscribe_failed">Failed to subscribe to this topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="strTyping">typing...</string>
    <string name="strShareTitle">Tolk Chat</string>
    <string name="strShareContent">I would like to share Amazing App with you. You can download this application from playstore easliy.</string>
    <string name="strDeleteTitle">Delete Chat</string>
    <string name="strDeleteConversion">Do you want to delete this conversion?</string>
    <string name="strOK">OK</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strBlank"></string>
    <string name="strOneCount">9</string>
    <string name="strEmailSmall">Email</string>
    <string name="strUsernameSmall">Username</string>
    <string name="strStatus">About</string>
    <string name="strAboutStatus">Hey! I am using Tolk Chat App.</string>
    <string name="strEnterAbout">Enter your status</string>
    <string name="msgErrorEnterDesc">Please enter your status</string>
    <string name="strDone">Done</string>
    <string name="strCancel">Cancel</string>
<string name="transalteapi">AIzaSyC45MQWEQMFZkPum-sU75IAVryMsgzNxUk</string>
    <string name="strSelectGender">Select Gender</string>
    <string name="strSelectLanguage">Select Language</string>
    <string name="msgSelectGender">Please select Language</string>
    <string name="strGender">Gender</string>
    <string name="strMale">Male</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="strFemale">Female</string>
    <string name="arabic">Arabic</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="hindi">Hindi</string>
    <string name="tswana">Sesotho</string>
    <string name="zulu">Zulu</string>
    <string name="russian">Russian</string>
    <string name="swahili">Swahili</string>

    <string name="strUnspecified">Unspecified</string>
    <string-array name="arrGender">
        <item>@string/english</item>
        <item>@string/french</item>
        <item>@string/spanish</item>
        <item>@string/arabic</item>
        <item>@string/hindi</item>
        <item>@string/afrikaans</item>
        <item>@string/tswana</item>
        <item>@string/zulu</item>
        <item>@string/russian</item>
        <item>@string/swahili</item>
    </string-array>

    <!-- Filters -->
    <string name="strFilters">Filters</string>
    <string name="strFilterTitle">Filters</string>
    <string name="strFilterOnline">Online/Offline</string>
    <string name="strOnline">Online</string>
    <string name="strOffline">Offline</string>
    <string name="msgErrorUserOnline">Please select at least 1 (Online or Offline)</string>
    <string name="msgErrorGender">Please select at least 1 Gender</string>
    <string name="strAllFieldsRequired">All fields are required!</string>
    <string name="strInvalidEmailPassword">Invalid email or password!</string>
    <string name="strEnterGroupName">Enter Group Name</string>
    <string name="msgEnterGroupName">Please enter group name</string>
    <string name="msgGroupMoreThanOne">Add at lease one members to create group</string>
    <string name="msgTapToStartChat">Tap to start group chat!</string>
    <string name="strYou">You</string>
    <string name="strGroupInfo">Tap to see group info</string>
    <string name="strCantSendMsg">You can\'t send empty message</string>
    <string name="lblAboutUs">About us</string>
    <string name="lblPrivacyPolicy">Privacy Policy</string>
    <string name="strEmptyMsg">You can\'t send empty message</string>
    <string name="msgOnlyAdminEdit">Only Group Admin can edit group.</string>
    <string name="msgOnlyAdminDelete">Only Group Admin can delete group.</string>
    <string name="msgFailedToUplod">Failed to upload!</string>
    <string name="strNewMessage">New Message</string>
    <string name="strNewGroupMessage">New Group Message</string>
    <string name="strSelected">Selected :</string>
    <string name="msgUploadInProgress">Upload in progress!</string>
    <string name="lblPhoto">Photo</string>
    <string name="strDelete">Delete</string>
    <string name="strLeave">Leave Group</string>
    <string name="strDeleteOwnChats">Do you want to delete your own chats?</string>
    <string name="strLeaveFromGroup">Do you want to leave from this group(It will delete your own chats as well)?</string>
    <string name="strDeleteWholeGroup">Do you want to delete whole group(It will delete all data as well)?</string>
    <string name="strPhotoSent">Tap to view photo sent by %1$s</string>

    <string name="profile_setting">PROFILE SETTING</string>
    <string name="general_setting">GENERAL</string>
    <string name="notification">Notification</string>
    <string name="rtl">RTL (Right to Left)</string>
    <string name="chat_language">Chat language</string>
    <string name="ref_title">Refresh</string>
    <string name="ref_message">To reflect the new changes app automatically restart</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Do you want logout from application?</string>
</resources>
