<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding16">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_additional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding5"
                android:layout_marginTop="@dimen/padding10"
                android:layout_marginRight="@dimen/padding5"
                android:text="@string/strFilterOnline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/chkOnline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/strOnline"
                    android:textAlignment="viewStart" />

                <CheckBox
                    android:id="@+id/chkOffline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/strOffline"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding5"
                android:visibility="gone"
                android:layout_marginTop="@dimen/padding16"
                android:text="@string/strGender" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/chkMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/strMale"
                    android:textAlignment="viewStart" />

                <CheckBox
                    android:id="@+id/chkFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/strFemale"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/chkNotSet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/strUnspecified"
                    android:textAlignment="viewStart" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding15"
                android:gravity="end"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strCancel" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnDone"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDone" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>