<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/padding10"
    app:cardElevation="@dimen/padding10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding20"
            android:paddingTop="@dimen/padding16"
            android:paddingRight="@dimen/padding20">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/padding5"
                android:layout_marginBottom="@dimen/padding10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/strSelectGender"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/padding5"
                android:layout_marginBottom="@dimen/padding10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/strSelectGender"
                android:textAlignment="viewStart"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding10"
            android:paddingRight="@dimen/padding10">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strNo" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnDone"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strYes" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>